--- a/client/src/components/MoreRating/MoreRating.css
+++ b/client/src/components/MoreRating/MoreRating.css
@@ -10,6 +10,7 @@
 
 .MoreRatingContainer h2{
     font-size: 2.2vw;
+    font-weight: bold;
 }
 
 .Zapas{
@@ -68,4 +69,13 @@
     align-items: center;
     justify-content: space-around;
     /* border: thin dotted #f00; */
+}
+
+@media (min-width: 1200px) and (max-width: 1399px){
+
+    .MoreRatingContainer h2{
+        font-size: 2.5vw;
+        font-weight: bold;
+    }
+
 }
