--- a/client/src/components/Newsletter/Newsletter.css
+++ b/client/src/components/Newsletter/Newsletter.css
@@ -66,8 +66,12 @@
 @media (min-width: 1200px) and (max-width: 1399px){
 
     .NewsletterTitle{
-        font-size: 3.5vw;
+        font-size: 2.5vw;
         font-weight: bold;
+    }
+
+    .NewsletterSubTitle{
+        font-size: 1.5vw;
     }
 
     .FormNewsLetter{
@@ -78,7 +82,7 @@
     }
 
     .FormNewsLetter form {
-        width: 70vw;
+        width: 50%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -86,12 +90,13 @@
     }
 
     .NewsletterInput{
-        width: 40vw;
+        width: 80%;
         height: 30px;
         padding: 10px;
         border: none;
         border-radius: 5px;
         margin: 5px 0;
+        font-size: 1vw;
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
     }
 
