--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -28,16 +28,7 @@
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.5);
 }
 
-.IconShopping{
-    width: 30px;
-    height: 30px;
-    margin: 0 10px;
-    border-radius: 20px;
-    background-color: #00000010;
-    background: '-moz-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
-    background: '-webkit-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
-    background: 'linear-gradient(to top, #9E0000 0%, #FF0000 100%)';
-}
+
 
 .TallesProduct{
     width: 100%;
@@ -123,12 +114,12 @@
 
     .Discount{
         width: 100%;
-        height: 50px;
+        height: 70px;
         position: absolute;
+        left: 100px;
         top: -15px;
-        left: 0;
         background-image: url('../../assets/discount.png');
-        background-size: 40%;
+        background-size: 30%;
         background-repeat: no-repeat;
         background-position: center center;
     }
@@ -137,9 +128,10 @@
         color: #fff;
         font-weight: bold;
         line-height: 40px;
-        font-size: 1.4vw;
+        letter-spacing: -2px;
+        font-size: 1.2vw;
         position: relative;
-        left: -8px;
+        top: 15px;
     }
     
     .Rate{
@@ -157,13 +149,39 @@
         font-size: 0.7vw;
     }
 
+    .IconShoppingContainer{
+        width: 100%;
+        margin-top: 10px;
+        position: absolute;
+        top: 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        color:  rgb(197, 197, 197);
+        transition: 0.5s all;
+        z-index: 1;
+    }
+
+    .IconShopping{
+        width: 30px;
+        height: 30px;
+        margin: 0 20px;
+        border-radius: 20px;
+        background-color: #00000010;
+        background: '-moz-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
+        background: '-webkit-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
+        background: 'linear-gradient(to top, #9E0000 0%, #FF0000 100%)';
+    }
+
+
 }
 
 @media (min-width: 1200px) and (max-width: 1399px){
 
     .ProductContainer{
-        width: 160px;
-        height: 250px;
+        width: 150px;
+        height: 220px;
         border-radius: 10px;
         display: flex;
         flex-direction: column;
@@ -180,7 +198,7 @@
     }
     
     .Zapatilla img{
-        width: 130px;
+        width: 110px;
         position: relative;
         top: 15px;
         /* height: 210px; */
@@ -200,7 +218,7 @@
     .PriceProduct{
         width: 95%;
         color: #000;
-        font-size: 1vw;
+        font-size: 1.1vw;
         display: flex;
         flex-direction: row;
         align-items: flex-start;
@@ -208,9 +226,13 @@
         /* border: thin dotted #f00; */
         margin-left: 10px;
     }
+
+    .PriceProduct h5{
+        font-size: 1.1vw;
+    }
     
     .OldPrice{
-        font-size: 1.5vw;
+        font-size: 1.1vw;
         margin: 0 10px;
         text-decoration:line-through;
         color: #f00;
@@ -218,12 +240,12 @@
 
     .Discount{
         width: 100%;
-        height: 50px;
+        height: 70px;
         position: absolute;
+        left: 70px;
         top: -15px;
-        left: 0;
         background-image: url('../../assets/discount.png');
-        background-size: 40%;
+        background-size: 30%;
         background-repeat: no-repeat;
         background-position: center center;
     }
@@ -232,9 +254,10 @@
         color: #fff;
         font-weight: bold;
         line-height: 40px;
-        font-size: 1.6vw;
+        font-size: 1.2vw;
+        letter-spacing: -1px;
         position: relative;
-        left: -8px;
+        top: 15px;
     }
     
     .Rate{
@@ -251,6 +274,33 @@
         color: #cccccc;
         font-size: 0.7vw;
     }
+
+    .IconShoppingContainer{
+        width: 100%;
+        margin-top: 10px;
+        position: absolute;
+        top: 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        color:  rgb(197, 197, 197);
+        transition: 0.5s all;
+        z-index: 1;
+    }
+    
+    .IconShopping{
+        width: 22px;
+        height: 22px;
+        margin: 0 15px;
+        border-radius: 20px;
+        background-color: #00000010;
+        background: '-moz-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
+        background: '-webkit-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
+        background: 'linear-gradient(to top, #9E0000 0%, #FF0000 100%)';
+        /* border: thin dotted #f00; */
+    }
+
 }
 
 @media (min-width: 992px) and (max-width: 1199px){
@@ -263,7 +313,6 @@
         flex-direction: column;
         align-items: center;
         transition: 0.5s all;
-        border: thin dotted #f00;
     }
 
     .Zapatilla{
