--- a/client/src/components/Forms/product/postProduct.css
+++ b/client/src/components/Forms/product/postProduct.css
@@ -109,6 +109,12 @@
     height: 40px;
     outline: none;
     border: none;
+    transition: all 0.3s ease-in-out;
+}
+.btnCreate:hover {
+    background-color: #555;
+    border-radius: 5px;
+    color: white;
 }
 .renderSizesProduct {
      height: 27px;
