--- a/client/src/components/Login/loginStyles.css
+++ b/client/src/components/Login/loginStyles.css
@@ -1,15 +1,16 @@
 .log-Cont{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 1)), url('../../assets/nikeBotaRoja.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
 }
+
 .log-Box{
     border: solid #ccc 1px;
     width: 900px;
@@ -24,14 +25,17 @@
     background-color: #fff;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
 }
+
 .border-dec{
     border: solid #ccc 1px;
     width: 480px;
 }
+
 .log-Box h1{
     text-align: left;
     margin-left: 23px;
 }
+
 .data-Field{
     width: 350px;
     height: 40px;
@@ -44,13 +48,14 @@
     border-radius: 8px;
     outline: none;
 }
+
 .form-box-log{
     margin-top: 35px;
     margin-left: 55px;
     width: fit-content;
 }
+
 .img-log{
-    /* border: solid blue 1px; */
     position: absolute;
     top: 0;
     left: 500px;
@@ -61,17 +66,21 @@
     background-position: center center;
     background-size: cover
 }
+
 .data-Field p{
     font-size: 16px;
 }
+
 .data-Field a {
     text-decoration: none;
     color: #fc4444;
 }
+
 .forgot-log{
     color: #fc4444;
     cursor: pointer;
 }
+
 .Field{
     width: 300px;
     height: 35px;
@@ -80,6 +89,7 @@
     border: thin solid #ccc;
     outline: none;
 }
+
 .btn-sub{
     width: 100px;
     height: 100px;
@@ -89,6 +99,7 @@
     border: thin solid #ccc;
     outline: none;
 }
+
 .btn-sub:hover{
     background-color: #fc4444; 
     transition-duration: 1s;
@@ -96,14 +107,17 @@
     font-weight: 100;
     transform:scale(1.1);
 }
+
 .btn-sub:after{
     transition: all 0.3s ease-in-out;
     transition-duration: 1s;
 }
+
 .log-error{
     font-size: 18px;
     color: red;
 }
+
 .log-error-inp{
     font-size: 12px;
     color: red;
@@ -111,9 +125,118 @@
 
 @media (min-width: 1200px) and (max-width: 1399px){
     
+    .log-Box{
+        width: 65%;
+        min-height: 60%;
+        max-height: 65%;
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        background-color: #fff;
+        border: solid #ccc 1px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
+        overflow: hidden;
+    }
+    
+    .log-Box h1{
+        font-size: 40px;
+        width:100%;
+        text-align: left;
+    }
+    
+    .img-log{
+        position: absolute;
+        top: 0;
+        left: 35vw;
+        width: 30vw;
+        height: 100%;
+        background-image: url('../../assets/sneake-new.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+    }
+    
+    .border-dec{
+        width: 51%;
+        margin-right: 30vw;
+        border: solid #ccc 1px;
+    }
+    
+    .form-box-log{
+        width: 45%;
+        margin-top: 15px;
+        margin-right: 34vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        margin-left: 55px;
+        width: fit-content;
+    }
+
+    .Field{
+        font-size: 14px;
+    }
+    
 }
 
 @media (min-width: 992px) and (max-width: 1199px){
+
+    .log-Box{
+        width: 75%;
+        min-height: 90%;
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        background-color: #fff;
+        border: solid #ccc 1px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
+        overflow: hidden;
+    }
+
+    .log-Box h1{
+        width:100%;
+        text-align: left;
+    }
+    
+    .img-log{
+        /* border: solid blue 1px; */
+        position: absolute;
+        top: 0;
+        left: 40vw;
+        width: 35vw;
+        height: 100%;
+        background-image: url('../../assets/sneake-new.jpg');
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+    }
+
+    .border-dec{
+        width: 51%;
+        margin-right: 35vw;
+        border: solid #ccc 1px;
+    }
+    
+    .form-box-log{
+        width: 45%;
+        margin-top: 15px;
+        margin-right: 40vw;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        margin-left: 55px;
+        width: fit-content;
+    }
+
+    .Field{
+        font-size: 16px;
+    }
     
    
 }
@@ -121,8 +244,8 @@
 @media (min-width: 768px) and (max-width: 991px){
 
     .log-Box{
-        width: 90vw;
-        height: 60vh;
+        width: 90%;
+        height: 60%;
         padding: 15px;
         display: flex;
         flex-direction: column;
@@ -144,21 +267,21 @@
         top: 0;
         left: 50vw;
         width: 40vw;
-        height: 60vh;
+        height: 100%;
         background-image: url('../../assets/sneake-new.jpg');
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover
     }
-
+    
     .border-dec{
-        width: 45vw;
+        width: 51%;
         margin-right: 40vw;
         border: solid #ccc 1px;
     }
     
     .form-box-log{
-        width: 45vw;
+        width: 45%;
         margin-top: 15px;
         margin-right: 47vw;
         display: flex;
@@ -166,11 +289,12 @@
         align-items: center;
         justify-content: space-between;
         margin-left: 55px;
-        /* width: fit-content; */
+        width: fit-content;
+        /* border: solid blue 1px; */
     }
 
     .Field{
-        font-size: 2vw;
+        font-size: 16px;
     }
     
 }
@@ -221,9 +345,10 @@
 @media (max-width: 575px){
 
     .log-Box{
-        width: 80vw;
-        min-height: 50vh;
-        max-height: 60vh;
+        width: 80%;
+        min-height: 60%;
+        height: 65%;
+        max-height: 65%;
         padding: 15px;
         display: flex;
         flex-direction: column;
@@ -235,14 +360,15 @@
     }
     
     .log-Box h1{
-        width: 70vw;
+        width: 100%;
+        font-size: 28px;
         text-align: left;
     }
-
+    
     .img-log{
         display: none;
     }
-
+    
     .border-dec{
         width: 65vw;
         border: solid #ccc 1px;
@@ -259,24 +385,49 @@
         margin-left: 55px;
         /* width: fit-content; */
     }
-
+    
     .Field{
-        width: 60vw;
-        height: 35px;
+        width: 90%;
+        height: 30px;
         border-radius: 5px;
         padding-left: 10px;
         border: thin solid #ccc;
         outline: none;
+        font-size: 14px;
+    }
+    
+    .data-Field{
+        width: 100%;
+        height: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        outline: none;
+        /* border: thin solid #f00; */
     }
 
     .data-Field p{
-        width: 50vw;
-        font-size: 4vw;
+        width: 80%;
+        font-size: 14px;
     }
 
     .data-Field a {
         text-decoration: none;
         color: #fc4444;
     }
+
+    .btn-sub{
+        width: 90px;
+        height: 35px;
+        border-radius: 5px;
+        background:none;
+        border: thin solid #ccc;
+        outline: none;
+    }
+
+    
 
 }
