--- a/client/src/components/Profile/profile.css
+++ b/client/src/components/Profile/profile.css
@@ -33,3 +33,26 @@
     border: 1px solid red;
     width: max-content;
 }
+
+.Modal-Profile-Row{
+    height: 50px;
+}
+
+.label-profile-modal{
+    font-weight: bold;
+    width: 80px;
+}
+
+.Modal-Profile-Input:focus{
+    border: none;
+    outline: thin solid #f00;
+}
+
+.Btn-Profile-Modal{
+    width: 100%;
+    height: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
